@@ -16,6 +16,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Updated `docs/RELEASE_CHECKLIST_ALPHA.md` with optional GitHub Actions parity runs for both workflows.
 - Updated `docs/RELEASE_CHECKLIST_ALPHA.md` with immutable-release change record checks for `CHANGELOG.md` and `docs/RELEASE_NOTES.txt`.
 - Refreshed `docs/RELEASE_ANNOUNCEMENT.txt` to match current adapter expansion, verify-gate, and workflow scope.
+- Updated release packaging to include `CHANGELOG.md` in staged bundle and copied release-sidecar artifacts.
 
 ### Safe-run evidence corridor
 - `safe-run` now verifies expected receipt artifacts for presence and digest consistency before completion.
@@ -48,6 +49,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Extended docs release contract coverage to include `docs/RELEASE_CHECKLIST_ALPHA.md`.
 - Extended docs release contract coverage to enforce immutable-release checklist references (`CHANGELOG.md`, `docs/RELEASE_NOTES.txt`).
 - Extended docs release contract coverage to enforce release announcement workflow/managed-verify references.
+- Extended release bundle contract coverage to enforce `CHANGELOG.md` in packaging/checklist outputs.
 - `verify:360:harness` now validates strict-mode idempotence separation (`NEW` then `REPLAY`) to prevent strict/non-strict replay-key regression.
 - Emergency verify report output now includes policy summary lines (`policy.*`) and failure receipts carry interpreted policy fields for consistent fail-closed readability.
 
